# mcp-indian-astrology

./: Dockerfile  LICENSE  README.md  __init__.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  server.py
divineapi_indian_astrology_mcp/: __init__.py  server.py
